--- a/i18n/es.yml
+++ b/i18n/es.yml
@@ -51,11 +51,11 @@ booking_settings:
       rent: Alquiler
       restaurant: Restaurante       
     reservation_starts_with:
-      title: La reserva empieza seleccionando
-      dates: Las fechas
-      categories: Los productos
-      shoppingcart: Carrito de la compra
-    deposit: \% Depósito
+      title: Tipo formulario de reserva
+      dates: Selección fechas (para 1 producto)
+      categories: Selección producto (para 1 producto)
+      shoppingcart: Reserva múltiples productos
+    deposit: "% Depósito"
     allow_total_payment: Permitir pagar el total de la reserva
     min_days: Numero mínimo de días    
     family: Tipo de producto en alquiler
@@ -64,7 +64,7 @@ booking_settings:
     no_pickup_return_timetable: No aplica
     pickup_return_timetable: Horario entrega/recogida
     pickup_return_timetable_out_price: Precio entrega/recogida fuera de horas
-    payment: Habilitar pago online
+    payment: Pago online
     morning_turns: Mañana
     afternoon_turns: Tarde 
     night_turns: Noche
@@ -78,9 +78,9 @@ booking_settings:
     max_adults: Número máximo de adultos
     max_adults_extra: Número máximo de adultos (extra)
     people_resources: Recursos para los clientes        
-    general_group: General
+    general_group: Datos básicos
     pickup_return_group: Entrega y recogida    
-    payment_group: Pagos
+    payment_group: Pago online
     turns_group: Turnos
     people_group: Gente   
     rent_group: Alquiler 
@@ -111,18 +111,19 @@ booking_console:
   title: Entregas y recogidas
   configuration: Configuración
   products: Productos
+  activities: Actividades
   rates: Tarifas
   bookings: Reservas alquiler
-  activities: Reservas actividades
+  activity_bookings: Reservas actividades
   crm: CRM
   finances: Finanzas
   statistics: Estadísticas
   listing: Listados
   utils: Utilidades
   catalogs: Catálogos
-  categories: Categorías
+  categories: Productos
   extras: Extras
-  items: Productos
+  items: Stock
   prices: Precios
   reservations: Reservas
   planning: Planning    
@@ -132,13 +133,13 @@ booking_console:
   new_booking: Nueva reserva
   availability: Calendarios
   summary: Resumen
-  places: Entrega y recogida
+  pickup_return: Entrega y recogida
+  places: Lugares
   create_rates: Preparar tarifas
-  adjust_prices: Modificación masiva    
+  adjust_prices: Ajustes masivos precios    
   calendars: Calendarios
   timetables: Horarios
   receipts: Cobros  
-  activities: Pedidos actividades
   information_requests: Solicitudes información
 booking_console_restaurant:
   table_types: Tipos de mesa 
@@ -606,7 +607,7 @@ booking_category_management:
     prices: Precios  
     scheduler: Agenda
   form:
-    title: Categorías
+    title: Productos
     code:
       label: Código
     name:
@@ -634,7 +635,15 @@ booking_category_management:
     deposit:
       label: Depósito
     active:
-      label: Activo       
+      label: Activo
+    create_rates:
+      label: Generar tarifas
+    create_calendar:
+      label: Generar calendario
+      description: >
+                   <p class="less_contrast_text">Asociando un calendario a una categoría puede configurar
+                   si desea impedir realizar reservas, habilitar los pagos, ...
+                   en fechas determinadas</p>
 booking_extra_management:
   title: Extras
   description: Gestión de extras
@@ -658,11 +667,11 @@ booking_item_management:
     calendar: Gestió del calendario
     prices: Gestión de precios    
   form:
-    title: Productos
+    title: Stock
     reference: 
       label: Referencia
     category:
-      label: Categoría      
+      label: Producto      
     name:
       label: Nombre
     description:
@@ -674,7 +683,7 @@ booking_item_management:
     active:
       label: Activo       
 booking_places_definition_management:
-  title: Entrega y recogida
+  title: Lugares entrega y recogida
   table:
     id: Id
     name: Nombre
@@ -797,3 +806,34 @@ booking_dashboard:
   delivery: Entregas del día
   transit: En curso
   return: Devoluciones del día
+booking_activity_management:
+  title: Actividades 
+  form:
+    occurrence: Frecuencia
+    occurrence_one_time: Una vez
+    occurrence_multiple_dates: Múltiples fechas
+    occurrence_cyclic: Cíclica
+    mode: Forma de compra
+    mode_full: El cliente contrata la actividad completa
+    mode_partial: El cliente compra tickets por plazas
+    new_activity_detail: >
+                       <p>Está creando una nueva actividad para su negocio. Una 
+                       actividad representa un evento o experiencia que ofrece a
+                       sus clientes y que se llevan a cabo en unas fechas y horarios
+                       determinados.
+                       </p>
+                       <p>Debe tener en cuenta la frecuencia con la que la 
+                       actividad se lleva a cabo y la forma en la que el 
+                       cliente la contrata.</p>
+    occurrence_detail: >
+                       <h4>Frecuencia</h4>
+                       <ul>
+                         <li>Se lleva a cabo una única vez</li>
+                         <li>Se lleva a cabo varias veces en fechas determinadas</li>
+                         <li>Se lleva a cabo de forma recurrente (días de la semana y horarios)</li>
+                       </ul>
+    mode_detail: >
+                 <h4>Forma de compra</h4>
+                 <p>El cliente final compra la actividad
+                 completa o bien compra unos tickets o entradas para un número de 
+                 personas</p>                       
